# agentic-discord-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  agent_config.example.json  app.py  docker-compose.yml  instructions.md.example  pyproject.toml  run.sh  servers_config.example.json
.github/workflows/: ci.yml  test.yml
bot/: agent.py  auth.py  config.py  discord_bot.py  formatting.py  ratelimit.py
tests/: test_agents.py  test_auth.py  test_cli.py  test_config.py  test_discord_bot.py  test_formatting.py
