[project]
name            = "agentic-discord-bot"
version         = "0.1.0"
description     = "Agentic Discord Bot powered by OpenAI Agents SDK with MCP support"
readme          = "README.md"
requires-python = ">=3.14"
dependencies    = [
  "agent-core @ git+https://github.com/John-Lin/agent-core.git@main",
  "discord.py>=2.4.0",
  "openai-agents>=0.13.0",
  "python-dotenv>=1.1.0",
]

[project.scripts]
bot = "app:run"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pip>=24.2",
  "pytest>=8.3.3",
  "pytest-anyio>=0.0.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.7.3",
  "tombi>=0.9.16",
  "ty>=0.0.29",
]

[tool.ruff]
exclude     = ["build"]
line-length = 120

[tool.ruff.lint]
select = [
  "B",      # flake8-bugbear
  "C",      # flake8-comprehensions
  "E",      # pycodestyle errors
  "F",      # pyflakes
  "I",      # isort
  "N",      # pep8-naming
  "SIM",    # flake8-simplify
  "UP",     # pyupgrade
  "W",      # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ty.rules]
all = "error"

[tool.tombi.format.rules]
key-value-equals-sign-alignment = true
trailing-comment-alignment      = true

[tool.pytest.ini_options]
testpaths       = ["tests"]
filterwarnings  = [
  "ignore::DeprecationWarning:discord",
]
log_file        = "logs/pytest.log"
log_file_level  = "INFO"
log_format      = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["bot"]
